--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,6 +35,8 @@
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
+
+    --selgold: 51, 100%, 50%;
   }
 
   .dark {
@@ -65,6 +67,8 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
+
+    --selgold: 51, 100%, 50%;
   }
 }
 
